--- a/custom.css
+++ b/custom.css
@@ -15,6 +15,7 @@ limitations under the License.
 */
 
 :root {
+	/*this is s a demo for milner*/
    /* Modify these to change your theme colors: */
    --primary: #00FF00;
    --text: #DDD;
