hopefully changes message box color prioirty

--- a/custom.css
+++ b/custom.css
@@ -48,6 +48,33 @@ h1, h2, h3, h4 {
    background-color: var(--PopOver);
 }
 
+/*message window*/
+span.c-message__body,	
+	a.c-message__sender_link,
+	span.c-message_attachment__text,
+	.c-message_attachment__field_value,
+	span.c-message_attachment__media_trigger.c-message_attachment__media_trigger--caption,
+	div.p-message_pane__foreword__description span
+	{
+		color:  var(--primary) !important;
+	}
+
+	.c-message_attachment__field_title
+	{
+		font-weight: bold;
+		color:  var(--text) !important;
+	}
+.c-message:hover .c-message__body--automated, .c-message--hover .c-message__body--automated .c-message--focus .c-message__body--automated 
+{ 
+color: var(--background-elevated); 
+}
+
+.c-message:hover .c-message__file_meta, .c-message--hover .c-message__file_meta .c-message--focus .c-message__file_meta 
+{ 
+color: var(--background-bright); 
+}
+
+
 /* Team Picker */
 .TeamSidebar, .TeamSidebar .StoplightContainer, .TeamSidebar .TeamSidebar-addArea {
    background-color: var(--background) !important;
@@ -984,29 +1011,4 @@ ts-jumper, ts-jumper.active {
 }
 ts-jumper ts-jumper-container {
   box-shadow: 0 5px 20px rgba(0,0,0,1);
-}
-
-span.c-message__body,	
-	a.c-message__sender_link,
-	span.c-message_attachment__text,
-	.c-message_attachment__field_value,
-	span.c-message_attachment__media_trigger.c-message_attachment__media_trigger--caption,
-	div.p-message_pane__foreword__description span
-	{
-		color:  var(--primary) !important;
-	}
-
-	.c-message_attachment__field_title
-	{
-		font-weight: bold;
-		color:  var(--text) !important;
-	}
-.c-message:hover .c-message__body--automated, .c-message--hover .c-message__body--automated .c-message--focus .c-message__body--automated 
-{ 
-color: var(--background-elevated); 
-}
-
-.c-message:hover .c-message__file_meta, .c-message--hover .c-message__file_meta .c-message--focus .c-message__file_meta 
-{ 
-color: var(--background-bright); 
 }
